[package]
name = "pyu_rust_util"
version = "0.1.80"
edition = "2021"
description = "Utility functions for Rust."
license = "GPL-3.0"
authors = ["pyudev-x"]
categories = ["cli", "functions", "util", "simple"]
keywords = ["cli", "functions", "util", "simple"]

[dependencies]
rodio = "0.17.1"
termion = "2.0.1"
